--- a/client/src/pages/ServicesPage.css
+++ b/client/src/pages/ServicesPage.css
@@ -6,7 +6,7 @@
 /* Services Hero Banner */
 .services-hero {
   position: relative;
-  background-image: url('/images/services/services-hero.jpg');
+  background-color: #2C5F7C;
   background-size: cover;
   background-position: center;
   padding: 6rem 0;
