--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -319,6 +319,7 @@
   background-color: #2C5F7C;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
   padding: 6rem 0 0 0;
   margin: 0;
